src/objects/c2g__BillingSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Extension Settings (FF)</description>
    <fields>
        <fullName>c2g__DisableTriggers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED:Disable the FFA Billing Triggers. Select if the Billing Extension is to be used instead.</description>
        <label>DEPRECATED:DisableTriggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__HeaderExpanded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show Header details on Manage lines as expanded by default</description>
        <label>Header Expanded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__StopUsingAPExtensionPackage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Stop Using AP Extension Package</description>
        <label>Stop Using AP Extension Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__StopUsingBillingExtensionPackage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Stop Using Billing Extension Package</description>
        <label>Stop Using Billing Extension Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__StopUsingJournalExtensionPackage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Stop Using Journal Extension Package</description>
        <label>Stop Using Journal Extension Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__UseAPExtensionPackageFields__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED: Use AP Extension Package Fields</description>
        <label>DEPRECATED: Use AP Ext Package Fields</label>
        <type>Checkbox</type>
    </fields>
    <label>Extension Settings (FF)</label>
</CustomObject>